<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.monitoringapp.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_main"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.monitoringapp.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/incidentsFragment"
        android:name="com.example.monitoringapp.ui.incidents.IncidentsFragment"
        android:label="@string/alerts_title"
        tools:layout="@layout/fragment_incidents">
        <argument
            android:name="filterHost"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="filterName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_incidents_to_detail"
            app:destination="@id/incidentDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/incidentDetailFragment"
        android:name="com.example.monitoringapp.ui.incidents.IncidentDetailFragment"
        android:label="@string/incident_detail"
        tools:layout="@layout/fragment_incident_detail">
        <argument
            android:name="incidentId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/metricsFragment"
        android:name="com.example.monitoringapp.ui.metrics.MetricsFragment"
        android:label="@string/graphs_title"
        tools:layout="@layout/fragment_metrics">
        <argument
            android:name="incidentId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="metricQuery"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="threshold"
            android:defaultValue="-1"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/terminalHostsFragment"
        android:name="com.example.monitoringapp.ui.terminal.TerminalHostsFragment"
        android:label="@string/terminal_title"
        tools:layout="@layout/fragment_terminal_hosts">
        <action
            android:id="@+id/action_terminal_hosts_to_connect"
            app:destination="@id/terminalConnectFragment" />
        <action
            android:id="@+id/action_terminal_hosts_to_session"
            app:destination="@id/terminalSessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/terminalConnectFragment"
        android:name="com.example.monitoringapp.ui.terminal.TerminalConnectFragment"
        android:label="@string/terminal_new_connection"
        tools:layout="@layout/fragment_terminal_connect">
        <action
            android:id="@+id/action_terminal_connect_to_session"
            app:destination="@id/terminalSessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/terminalSessionFragment"
        android:name="com.example.monitoringapp.ui.terminal.TerminalSessionFragment"
        android:label="@string/terminal_title"
        tools:layout="@layout/fragment_terminal_session">
        <argument
            android:name="connectMode"
            app:argType="string" />
        <argument
            android:name="hostname"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="port"
            android:defaultValue="22"
            app:argType="integer" />
        <argument
            android:name="username"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="password"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="authMethod"
            android:defaultValue="password"
            app:argType="string" />
        <argument
            android:name="privateKey"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="passphrase"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="hostId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="sessionTitle"
            android:defaultValue=""
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.monitoringapp.ui.settings.SettingsFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_users"
            app:destination="@id/usersFragment" />
    </fragment>

    <fragment
        android:id="@+id/usersFragment"
        android:name="com.example.monitoringapp.ui.users.UsersFragment"
        android:label="@string/users_title"
        tools:layout="@layout/fragment_users" />

</navigation>
